--- a/music-client/package.json
+++ b/music-client/package.json
@@ -14,7 +14,8 @@
     "element-ui": "^2.15.6",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^2.3.1"
+    "vuex": "^2.3.1",
+    "webpack-dev-server": "^2.9.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -51,7 +52,6 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
